--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,36 +1,47 @@
-
-/* main decoration*/
-body{
-   background-color: #F0F4FF;
-   color: #6f6f6f;
-}
-
+/* General.....................
+....................*/
 a{
-  color: #000000;
   text-decoration: none;
 }
 
+img{
+  max-width: 100%;
+}
 /*header decoration */
 
 header{
-  border-bottom: medium solid #a3a3a3;
-  color:#a3a3a3;
   font-family: 'Bree Serif', serif;
+  margin:0 0 30px 0;
+  padding:5px 0 0 0;
+  width:100%;
+  float:left;
+  border-bottom: medium solid #a3a3a3;
 }
 
 
 h1,h2{
   color:#a3a3a3;
   font-weight:normal;
+  margin:0 auto;
+  font-size: 2em;
 }
 
-#logo{
-  display:block;
-  float:left;
-  margin:15px 0 15px 30px;
+nav ul{
+  list-style: none;
+  margin:5px 10px;
+  padding:0;
+  text-align: center;
+}
+nav li{
+  display: inline-block;
 }
 
-
+nav a{
+    color: #2f2f2f;
+    font-weight: 800;
+    padding: 15px 15px;
+    font-size: 1.5em;
+}
 nav a:hover{
   color: #a3a3a3;
 }
@@ -48,3 +59,40 @@ nav a:hover{
 
 
 /*footer decoration*/
+footer{
+  font-size:0.75em;
+  text-align: center;
+  clear: both;
+  padding-top: 50px;
+  color:#ccc;
+}
+
+.social-icon{
+  width:20px;
+  height:20px;
+  margin:0 5px;
+}
+
+
+/* Page Photo.....................
+....................*/
+#gallery{
+  margin:0;
+  padding:0;
+  list-style: none;
+}
+
+#gallery li{
+  float:left;
+  width:45%;
+  margin:2.5%;
+  background-color: #f5f5f5;
+  color:#bdc3c7;
+}
+
+#gallery li p{
+  margin:0;
+  padding:5%;
+  font-size:0.75em;
+  color:#bdc3c7;
+}
